# guild-pin-fuel

./: Cargo.toml  Forc.toml  README.md
examples/: claim.rs  deploy.rs  pin.rs
lib/: contract.rs  lib.rs  metadata.rs  parameters.rs  utils.rs
pin/: Cargo.toml  Forc.toml
pin-common/: Forc.toml
pin-common/src/: lib.sw  signature.sw
pin-contract/: Cargo.toml  Forc.toml
pin-contract/src/: common.sw  interfaces.sw  main.sw
pin-contract/src/interfaces/: foo.sw  info.sw  init.sw  owner.sw  src20.sw  token.sw
pin-contract/tests/pintest/: claim.rs  contract.rs  fee.rs  init.rs  main.rs  mint.rs  owner.rs  parameters.rs  signer.rs  treasury.rs  utils.rs
pin-token/: Cargo.toml  Forc.toml
pin-token/src/: errors.sw  events.sw  interfaces.sw  main.sw
pin-token/src/interfaces/: info.sw  init.sw  owner.sw  pin.sw  src20.sw  src3.sw  src5.sw  token.sw
pin-token/tests/: main.rs  setup.rs
pin-treasury/: Cargo.toml
pin-treasury/src/: main.sw
pin-treasury/tests/: main.rs  setup.rs
src/: common.sw  interfaces.sw  main.sw
src/common/: action.sw  base64.sw  claim.sw  pin.sw  utils.sw
src/interfaces/: init.sw  metadata.sw  owner.sw  src20.sw  token.sw
tests/pintest/: burn.rs  claim.rs  contract.rs  fee.rs  init.rs  main.rs  metadata.rs  owner.rs  signer.rs  treasury.rs  utils.rs
token/: Cargo.toml  Forc.toml
token/src/: errors.sw  events.sw  main.sw
token/tests/: main.rs  setup.rs
token/tests/utils/: interface.rs  setup.rs
treasury/: Cargo.toml  Forc.toml
treasury/src/: errors.sw  events.sw  main.sw
