[package]
name = "guild-pin-contract"
version = "0.0.0"
authors = ["PopcornPaws"]
edition = "2021"

[dev-dependencies]
fuels = "0.50"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
signrs = { git = "https://github.com/agoraxyz/signrs", features = ["eth"] }
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }

[[test]]
harness = true
name = "pintest"
path = "tests/pintest/main.rs"
