[package]
name = "guild-pin-contract"
version = "0.0.0"
authors = ["PopcornPaws"]
edition = "2021"

[dependencies]
fuels = "0.50"
sha3 = "0.10"
serde_json = "1"
signrs = { git = "https://github.com/agoraxyz/signrs", features = ["eth"] }

[dev-dependencies]
base64 = "0.21"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }

[lib]
path = "lib/lib.rs"

[[test]]
harness = true
name = "pintest"
path = "tests/pintest/main.rs"
