[package]
name = "guild-pin-contract"
version = "0.0.0"
authors = ["PopcornPaws"]
edition = "2021"

[dev-dependencies]
fuels = { workspace = true }
signrs = { git = "https://github.com/agoraxyz/signrs", features = ["eth"] }
tokio = { workspace = true }

[[test]]
harness = true
name = "pintest"
path = "tests/pintest/main.rs"
